--- a/templates/base.html
+++ b/templates/base.html
@@ -170,6 +170,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="userDropdown">
                             <li><a class="dropdown-item" href="{% url 'my_bookings' %}">My Bookings</a></li>
+                            
+                            <li><a class="dropdown-item" href="{% url 'my_appointments' %}">Appointments </a></li>
+                            
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
